# phoc

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  NEWS  README.md  meson.build
.gitlab-ci/: debian.Dockerfile
.reuse/: dep5
data/: meson.build  mobi.phosh.phoc.gschema.xml
debian/: changelog  control  gbp.conf  install  not-installed
doc/: gettingstarted.md  phoc.gsettings.rst  phoc.ini.rst  phoc.rst
examples/: egl-common.c  egl-common.h  idle.c  layer-shell-effects.c  meson.build  ptk-demo-cutout.c  ptk-demo-subsurface.c  ptk-demo.c  ptk-demo.h
examples/ptk/: meson.build  ptk-display-private.h  ptk-display.c  ptk-display.h  ptk-subsurface.c  ptk-subsurface.h  ptk-surface-private.h  ptk-surface.c  ptk-surface.h  ptk-toplevel.c  ptk-toplevel.h  ptk-types.c  ptk-types.h  ptk.h
examples/shaders/: cutout-rect.frag  cutout-rect.vert  meson.build
po/: LINGUAS  de.po  ja.po  ka.po  pl.po
protocols/: meson.build
src/: bling.c  bling.h  cairo-texture.c  cairo-texture.h  child-root.c  child-root.h  color-rect.c  color-rect.h  cursor.c  cursor.h  cutouts-overlay.c  debug-control.c  debug-control.h  desktop-xwayland.c  desktop-xwayland.h  desktop.c  desktop.h  event.h  focus-frame.c  focus-frame.h  gtk-shell.c  gtk-shell.h  idle-inhibit.c  idle-inhibit.h  input-method-relay.c  input.c  keybindings.c  keybindings.h  keyboard.c  layer-shell-effects.c  layer-shell-effects.h  layer-shell-private.h  layer-shell.c  layer-surface.c  layer-surface.h  layout-transaction.c  layout-transaction.h  main.c  meson.build  output-cutouts.c  (+60 more)
src/anim/: property-easer.c  property-easer.h
src/dbus/: mobi.phosh.Phoc.DebugControl.xml
subprojects/: gmobile.wrap  wlroots.wrap
subprojects/packagefiles/wlroots/: 0001-backend-libinput-fix-build-with-libinput-1.31.patch  0002-backend-libinput-add-support-for-LIBINPUT_SWITCH_KEY.patch
tests/: meson.build  test-client.c  test-color-rect.c  test-keybindings.c  test-layer-shell-effects.c  test-layer-shell.c  test-outputs-states.c  test-phosh-private.c  test-property-easer.c  test-run.c  test-server.c  test-settings.c  test-timed-animation.c  test-utils.c  test-xdg-decoration.c  test-xdg-shell.c  test-xwayland.c  test-xx-cutouts.c  testlib.c  testlib.h
tools/: phoc-outputs-states.c
